--- a/public/index.html
+++ b/public/index.html
@@ -103,8 +103,8 @@
             <li class="h-full hidden xl:flex">
                 <a href="#" class="inline-flex items-center justify-center p-1 rounded-full
                 hover:bg-gray-200 dark:hover:bg-dark-third mx-1">
-                    <img src="images/tuat.jpeg" alt="Profile picture" class="rounded-full h-7 w-7">
-                    <span class="mx-2 font-semibold dark:text-dark-txt">Taut</span>
+                    <img src="images/yousef.jpeg" alt="Profile picture" class="rounded-full h-7 w-7">
+                    <span class="mx-2 font-semibold dark:text-dark-txt">Yousef</span>
                 </a>
             </li>
             <li>
@@ -137,6 +137,333 @@
         <!-- END RIGHT NAV -->
     </nav>
     <!-- *END NAV -->
+
+    <!-- *MAIN -->
+    <div class="flex justify-center h-screen">
+        <!-- LEFT MENU -->
+        <div class="w-1/5 pt-16 h-full hidden xl:flex flex-col fixed top-0 left-0">
+            <ul class="p-4">
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/yousef.jpeg" alt="Profile picture" class="h-10 w-10 rounded-full">
+                        <span class="font-semibold">Yousef Roshandel</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/friends.png" alt="Profile picture" class="h-10 w-10 rounded-full">
+                        <span class="font-semibold">Friends</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/pages.png" alt="Profile picture" class="h-10 w-10 rounded-full">
+                        <span class="font-semibold">Pages</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/memories.png" alt="Profile picture" class="h-10 w-10 rounded-full">
+                        <span class="font-semibold">Memories</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/groups.png" alt="Profile picture" class="h-10 w-10 rounded-full">
+                        <span class="font-semibold">Group</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <span class="w-10 h-10 rounded-full grid place-items-center bg-gray-300 dark:bg-dark-second">
+                            <i class='bx bx-chevron-down'></i>
+                        </span>
+                        <span class="font-semibold">See more</span>
+                    </a>
+                </li>
+                <li class="border-b border-gray-200 dark:boder-dark-third mt-6"></li>
+            </ul>
+            <div class="flex justify-between items-center px-4 h-4 group">
+                <span class="font-semibold text-gray-500 text-lg dark:text-dark-txt">Your shortcuts</span>
+                <span class="text-blue-500 cursor-pointer hover:bg-gray-200 dark:hover:bg-dark-third
+                p-2 rounded-md hidden group-hover:inline-block">Edit</span>
+            </div>
+            <ul class="p-4">
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/group1.png" alt="Profile picture" class="h-10 w-10 rounded-lg object-cover">
+                        <span class="font-semibold">Linus Torvalds | Facebook programming group</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/group2.png" alt="Profile picture" class="h-10 w-10 rounded-lg object-cover">
+                        <span class="font-semibold">Lorem GP</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/group3.png" alt="Profile picture" class="h-10 w-10 rounded-lg object-cover">
+                        <span class="font-semibold">Manjaro - Enjoy the simplicity</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <img src="./images/group4.png" alt="Profile picture" class="h-10 w-10 rounded-lg object-cover">
+                        <span class="font-semibold">About the Foxhole Game</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-200 rounded-lg
+                    transition-all dark:text-dark-txt dark:hover:bg-dark-third">
+                        <span class="w-10 h-10 rounded-full grid place-items-center bg-gray-300 dark:bg-dark-second">
+                            <i class='bx bx-chevron-down'></i>
+                        </span>
+                        <span class="font-semibold">See more</span>
+                    </a>
+                </li>
+            </ul>
+            <div class="mt-auto p-6 text-sm text-gray-500 dark:text-dark-txt">
+                <a href="#">Privacy</a>
+                <span>.</span>
+                <a href="#">Temrs</a>
+                <span>.</span>
+                <a href="#">Advertising</a>
+                <span>.</span>
+                <a href="#">Cookies</a>
+                <span>.</span>
+                <a href="#">Ad choiece</a>
+                <span>.</span>
+                <a href="#">More</a>
+                <span>.</span>
+                <span>Facebook © 2021</span>
+            </div>
+        </div>
+        <!-- END LEFT MENU -->
+
+        <!-- MAIN CONTENT -->
+        <div class="w-full lg:w-2/3 xl:w-2/5 pt-32 lg:pt-16 px-2 bg-red-200">
+
+        </div>
+        <!-- END MAIN CONTENT -->
+
+        <!-- RIGHT MENU -->
+        <div class="w-1/5 pt-16 h-full hidden xl:block px-4 fixed top-0 right-0">
+            <div class="h-full">
+                <div class="flex justify-between items-center px-4 pt-4">
+                    <span class="font-semibold text-gray-500 text-lg dark:text-dark-txt">Friend request</span>
+                    <span class="text-blue-500 cursor-pointer hover:bg-gray-200 dark:hover:bg-dark-third
+                    p-2 rounded-md">See All</span>
+                </div>
+                <div class="p-2">
+                    <a href="#" class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                    dark:hover:bg-dark-third rounded-lg transition-all">
+                        <img src="./images/tuat.jpeg" alt="Profile picture" class="w-16 h-16 rounded-full">
+                        <div class="flex-1 h-full">
+                            <div class="dark:text-dark-txt">
+                                <span class="font-semibold">Sakura Hinta</span>
+                                <span class="float-right">6d</span>
+                            </div>
+                            <div class="flex space-x-2 mt-2">
+                                <div class="w-1/2 bg-blue-500 cursor-pointer py-1 text-center
+                                font-semibold text-white rounded-lg">
+                                    Confirm
+                                </div>
+                                <div class="w-1/2 bg-gray-300 cursor-pointer py-1 text-center
+                                font-semibold text-black rounded-lg">
+                                    Delete
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="border-b border-gray-200 dark:border-dark-third mt-6"></div>
+                <!-- CONTACTS -->
+                <div class="flex justify-between items-center px-4 pt-4 text-gray-500 dark:text-dark-txt">
+                    <span class="font-semibold text-lg">Contacts</span>
+                    <div class="flex space-x-1">
+                        <div class="w-8 h-8 grid place-items-center text-xl hover:bg-gray-200
+                        dark:hover:bg-dark-third rounded-full cursor-pointer">
+                            <i class='bx bx-search-alt-2'></i>
+                        </div>
+                        <div class="w-8 h-8 grid place-items-center text-xl hover:bg-gray-200
+                        dark:hover:bg-dark-third rounded-full cursor-pointer">
+                            <i class='bx bx-dots-horizontal-rounded'></i>
+                        </div>
+                    </div>
+                </div>
+                <ul class="p-2">
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar1.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Parastoo Arman</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar2.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Borko Heracleitus</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar3.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Shahrokh Setareh</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar4.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Zeinab Shohreh</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar5.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Abdollah Soudeh</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar6.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Abdollah Soudeh</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar1.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Parastoo Arman</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar2.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Borko Heracleitus</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar3.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Shahrokh Setareh</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar4.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Zeinab Shohreh</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="flex items-center space-x-4 p-2 hover:bg-gray-200
+                        dark:hover:bg-dark-third dark:text-dark-txt rounded-lg cursor-pointer">
+                            <div class="relative">
+                                <img src="./images/avatar6.jpeg" alt="Friends profile picture"
+                                    class="rounded-full w-10 h-10">
+                                <span class="bg-green-500 w-3 h-3 rounded-full absolute right-0
+                                top-3/4 border-white border-2"></span>
+                            </div>
+                            <div>
+                                <span class="font-semibold">Abdollah Soudeh</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                <!-- END CONTACTS -->
+            </div>
+        </div>
+        <!-- END RIGHT MENU -->
+    </div>
+    <!-- *END MIAN -->
 </body>
 
 </html>
