--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                     <i class='bx bxl-messenger'></i>
                 </div>
                 <div class="text-2xl grid place-items-center md:hidden bg-gray-200 dark:bg-dark-third
-                rounded-full w-10 h-10 cursor-pointer hover:bg-gray-300 dark-text-dark-txt">
+                rounded-full w-10 h-10 cursor-pointer hover:bg-gray-300 dark-text-dark-txt" id="dark-mode-toggle-mb">
                     <i class='bx bxs-moon'></i>
                 </div>
             </div>
@@ -129,7 +129,8 @@
             </li>
             <li>
                 <div class="text-xl grid place-items-center bg-gray-200 dark:bg-dark-third
-                dark:text-dark-txt rounded-full mx-1 p-3 cursor-pointer hover:bg-gray-300 relative">
+                dark:text-dark-txt rounded-full mx-1 p-3 cursor-pointer hover:bg-gray-300 relative"
+                    id="dark-mode-toggle">
                     <i class='bx bxs-moon'></i>
                 </div>
             </li>
@@ -1347,6 +1348,8 @@
             <!-- END RIGHT MENU -->
         </div>
         <!-- *END MIAN -->
+
+        <script src="./app.js"></script>
 </body>
 
 </html>
